<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.5.RELEASE</version>
        <relativePath/>
    </parent>
    <groupId>com.example.ecommerce</groupId>
    <artifactId>parent-microservice</artifactId>
    <name>parent</name>
    <packaging>pom</packaging>
    <version>0.0.1-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
        <maven-resources-plugin>3.1.0</maven-resources-plugin>
        <java.version>1.8</java.version>
        <spring-cloud.version>Greenwich.SR1</spring-cloud.version>
        <springfox-swagger2.version>2.9.2</springfox-swagger2.version>
        <properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
        <sonar-maven-plugin.version>3.6.0.1398</sonar-maven-plugin.version>
        <openapi-generator-maven-plugin.version>3.3.4</openapi-generator-maven-plugin.version>
        <asciidoctor-maven-plugin.version>2.0.0-RC.1</asciidoctor-maven-plugin.version>
        <asciidoctorj-pdf.version>1.5.0-alpha.17</asciidoctorj-pdf.version>
        <asciidoctorj.version>2.0.0</asciidoctorj.version>
        <asciidoctorj-output-type>pdf</asciidoctorj-output-type> <!-- html5,pdf -->
        <jib-maven-plugin.version>1.2.0</jib-maven-plugin.version>
        <mapstruct.version>1.3.0.Final</mapstruct.version>
        <lombok.version>1.18.8</lombok.version>
        <swagger-ui.disabled>true</swagger-ui.disabled>

        <opentracing.version>0.3.1</opentracing.version>
        <spring.version>5.3.19</spring.version>
        <spring-boot.version>2.1.5.RELEASE</spring-boot.version>
        <validation-api.version>2.0.1.Final</validation-api.version>
        <liquibase-hibernate5.version>3.6</liquibase-hibernate5.version>
        <h2.version>1.4.199</h2.version>

        <liquibase-url>jdbc:h2:file:${project.build.directory}/h2db/db/product</liquibase-url>
        <liquibase-username>sa</liquibase-username>
        <liquibase-password></liquibase-password>
        <liquibase-driver>org.h2.Driver</liquibase-driver>
        <liquibase-dialect>org.hibernate.dialect.H2Dialect</liquibase-dialect>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <!--dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.cloud</groupId>
            <artifactId>spring-cloud-starter-sleuth</artifactId>
        </dependency>
        <dependency>
            <groupId>io.springfox</groupId>
            <artifactId>springfox-swagger2</artifactId>
            <version>${springfox-swagger2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctor-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>properties-maven-plugin</artifactId>
                <version>${properties-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>read-project-properties</goal>
                        </goals>
                        <configuration>
                            <quiet>true</quiet>
                            <files>
                                <file>sonar.properties</file>
                            </files>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.openapitools</groupId>
                    <artifactId>openapi-generator-maven-plugin</artifactId>
                    <version>${openapi-generator-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>generate</goal>
                            </goals>
                            <configuration>
                                <inputSpec>${project.basedir}/src/main/resources/swagger/api.yml</inputSpec>
                                <generatorName>spring</generatorName>
                                <templateDirectory>${project.basedir}/src/main/resources/mustache</templateDirectory>
                                <apiPackage>${project.groupId}.${project.name}.web.api</apiPackage>
                                <modelPackage>${project.groupId}.${project.name}.web.api.model</modelPackage>
                                <modelNameSuffix>Dto</modelNameSuffix>
                                <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
                                <validateSpec>true</validateSpec>
                                <configOptions>
                                    <delegatePattern>true</delegatePattern>
                                </configOptions>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${jib-maven-plugin.version}</version>
                    <configuration>
                        <from>
                            <image>openjdk:8-jre-alpine</image>
                        </from>
                        <to>
                            <image>${project.artifactId}</image>
                            <tags>
                                <tag>${project.version}</tag>
                                <tag>latest</tag>
                            </tags>
                        </to>
                        <container>
                            <ports>
                                <port>8080</port>
                            </ports>
                            <jvmFlags>
                                <jvmFlag>-XX:+UnlockExperimentalVMOptions</jvmFlag>
                                <jvmFlag>-XX:+UseCGroupMemoryLimitForHeap</jvmFlag>
                                <jvmFlag>-XX:+HeapDumpOnOutOfMemoryError</jvmFlag>
                                <jvmFlag>-XX:MaxRAMFraction=2</jvmFlag>
                            </jvmFlags>
                            <environment>
                                <SPRING_OUTPUT_ANSI_ENABLED>ALWAYS</SPRING_OUTPUT_ANSI_ENABLED>
                            </environment>
                            <labels>
                                <owner>${project.groupId}</owner>
                                <version>${project.version}</version>
                                <timestamp>${maven.build.timestamp}</timestamp>
                            </labels>
                            <useCurrentTimestamp>true</useCurrentTimestamp>
                        </container>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.asciidoctor</groupId>
                    <artifactId>asciidoctor-maven-plugin</artifactId>
                    <version>${asciidoctor-maven-plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.asciidoctor</groupId>
                            <artifactId>asciidoctorj</artifactId>
                            <version>${asciidoctorj.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.asciidoctor</groupId>
                            <artifactId>asciidoctorj-pdf</artifactId>
                            <version>${asciidoctorj-pdf.version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <sourceDirectory>src/docs/asciidoc</sourceDirectory>
                        <attributes>
                            <endpoint-url>http://example.org</endpoint-url>
                            <sourcedir>${project.build.sourceDirectory}</sourcedir>
                            <project-version>${project.version}</project-version>
                        </attributes>
                    </configuration>
                    <executions>
                        <execution>
                            <id>asciidoc-generate</id>
                            <phase>package</phase>
                            <goals>
                                <goal>process-asciidoc</goal>
                            </goals>
                            <configuration>
                                <backend>${asciidoctorj-output-type}</backend>
                                <sourceHighlighter>coderay</sourceHighlighter>
                                <attributes>
                                    <imagesdir>./images</imagesdir>
                                    <toc>left</toc>
                                    <icons>font</icons>
                                    <sectanchors>true</sectanchors>
                                    <idprefix/>
                                    <idseparator>-</idseparator>
                                    <docinfo1>true</docinfo1>
                                    <sourcedir>${project.basedir}/src/main/java</sourcedir>
                                </attributes>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.liquibase</groupId>
                    <artifactId>liquibase-maven-plugin</artifactId>
                    <version>${liquibase.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>org.liquibase.ext</groupId>
                            <artifactId>liquibase-hibernate5</artifactId>
                            <version>${liquibase-hibernate5.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-starter-data-jpa</artifactId>
                            <version>${spring-boot.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>javax.validation</groupId>
                            <artifactId>validation-api</artifactId>
                            <version>${validation-api.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.springframework</groupId>
                            <artifactId>spring-core</artifactId>
                            <version>${spring.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.springframework</groupId>
                            <artifactId>spring-context</artifactId>
                            <version>${spring.version}</version>
                        </dependency>
                        <dependency>
                            <groupId>org.springframework</groupId>
                            <artifactId>spring-beans</artifactId>
                            <version>${spring.version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <changeLogFile>${project.basedir}/src/main/resources/liquibase/master.xml</changeLogFile>
                        <diffChangeLogFile>${project.basedir}/src/main/resources/liquibase/changelog/${maven.build.timestamp}_changelog.xml</diffChangeLogFile>
                        <driver>${liquibase-driver}</driver>
                        <url>${liquibase-url}</url>
                        <defaultSchemaName></defaultSchemaName>
                        <username>${liquibase-username}</username>
                        <password>${liquibase-password}</password>
                        <referenceUrl>hibernate:spring:${project.groupId}.${project.name}.domain?dialect=${liquibase-dialect}&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                        <verbose>false</verbose>
                        <logging>debug</logging>
                        <contexts>!test</contexts>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                    <configuration>
                        <skip>${swagger-ui.disabled}</skip>
                    </configuration>
                    <executions>
                        <execution>
                            <id>copy-resources</id>
                            <phase>generate-resources</phase>
                            <goals>
                                <goal>copy-resources</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>${project.basedir}/target/extra-resources/public/swagger-ui</outputDirectory>
                                <resources>
                                    <resource>
                                        <directory>src/swagger-ui</directory>
                                        <filtering>true</filtering>
                                    </resource>
                                    <resource>
                                        <directory>src/main/resources/swagger</directory>
                                        <filtering>true</filtering>
                                    </resource>
                                </resources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>${project.basedir}/target/extra-resources</directory>
            </resource>
        </resources>
    </build>

</project>